esl/styles.css
/* GLOBAL STYLES */
* {
    padding: 0px;
    margin: 0px;
    font-family: 'Calibri', Helvetica, sans-serif;
    color: white;
}
body {
    display: flex;
    flex-direction: column;
}
p {
    font-size: 1.2rem;
    padding: 1rem;
    text-align: center;
}
span {
    font-family: 'Malgun Gothic', sans-serif;
    word-break: keep-all;
}
strong {
    padding: 1rem;
    font-size: 1.5rem;
    text-align: center;
    font-style: italic;
}

/* HEADER STYLES */
.header {
    background: url(/esl/bgimg.jpg);
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.header h1 {
    font-size: 2.25rem;
}
.header h2 {
    font-size: 1rem;
    padding-top: .15rem;
}


.header img {
    max-width: 15rem;
    min-width: none;
    padding-bottom: 2rem;

}
.header-image {
    padding-top: 1rem;
    justify-items: center;
    align-items: center;
}
.header-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
}
.btn {
    max-height: 2.5rem;
    margin-top: 1rem;
    border: none;
    border-radius: 25px;
    padding: .75rem 1.25rem;
    font-size: 1rem;
    color: white;
    background-color: navy;
    width: 10rem;
}

/* DESCRIPTION SECTION STYLES */
.description {
    display: flex;
    flex-direction: column;
    font-size: 2rem;
    background-color: aqua;
    text-align: center;

}

.description p {
    padding: .5rem;
}


.product-versions-title {
    padding: 1rem 0;
    font-size: 1.5rem;
    text-align: center;
}

.product-versions{
    padding: 1rem;
    background-color: aqua;
    display: flex;
    flex-direction: column;
}

.product-version{

    border: 1px solid grey;
    text-align: center;
    background-color: white;
    padding: 1rem;
}

.version-title {
    padding: .25rem;
    font-size: 2rem;
    color: black;
}

.version-price {
    padding: .75rem;
    font-size: 1.5rem;
    background-color: lightgray;
}

.version-item{
    border-bottom: 1px solid grey;
    padding: .75rem;
    font-size: 1rem;
    color: black;
}

.version-item:last-child {
    border-bottom: 0;
    padding: 1rem;

}

.btn-plain {
    font-weight: normal;
    color: black;
    background-color: gray;
}

.version-price-featured {
    color:white;
    background-color: navy;
}

.social {
    padding: 1rem 0;
    font-size: 1.5rem;
    text-align: center;

}


.social-links {
    margin-top: .75rem;
}

.social-links img {
    width: 50px;
}

.social-link {
    margin: 0 .25rem;
}

.footer {
    padding: 1rem 0;
    font-variant: small-caps;
    text-align: center;
    background-color: gray;
    display: flex;
    flex-direction: column;
}

.footer-links {
    margin-bottom: .75rem;
    font-size: 1.5rem;
    display: flex;
    flex-direction: column;
}

.footer-link {
    margin: 0 .25rem;
}

.copyright {
    font-style: italic;
    font-size: 1rem;
}

@media screen and (min-width:1600px){

    .header {
        display: flex;
        display: row;
    }
    
    .header-info {
        display: flex;
    }

}

